force-app/main/default/objects/Quota__c/Quota__c.object-meta.xml
<CustomObject>
    <label>Quota</label>
    <nameField>
        <displayFormat>QTA-{MMDDYYYY}-{00}</displayFormat>
        <label>Quota Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quota</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>