force-app/main/default/objects/Quota__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Quota</relationshipLabel>
    <relationshipName>Quota</relationshipName>
    <type>Lookup</type>
</CustomField>