force-app/main/default/objects/Quota__c/fields/Monthly_Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Quota_Amount__c</fullName>
    <label>Monthly Quota Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>