force-app/main/default/objects/Quota__c/fields/Quarterly_Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Quota_Amount__c</fullName>
    <label>Quarterly Quota Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>