force-app/main/default/objects/Quota__c/fields/Quota_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Quota_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quota Schedule</label>
    <referenceTo>Quota_Schedule__c</referenceTo>
    <relationshipLabel>Quota</relationshipLabel>
    <relationshipName>Quota</relationshipName>
    <type>Lookup</type>
</CustomField>