force-app/main/default/objects/Quota__c/fields/Quota_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Quota_Start_Date__c</fullName>
    <label>Quota Start Date</label>
    <type>Date</type>
</CustomField>