force-app/main/default/objects/Quota__c/fields/Revenue_Category__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Category__c</fullName>
    <label>Revenue Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Time &amp; Materials</fullName>
            </value>
            <value>
                <fullName>Channel Revenue</fullName>
            </value>
            <value>
                <fullName>Intercompany Income</fullName>
            </value>
            <value>
                <fullName>Other Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>