force-app/main/default/objects/Quota__c/fields/Revenue_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Revenue_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue GL Account</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>Quota</relationshipLabel>
    <relationshipName>Quota</relationshipName>
    <type>Lookup</type>
</CustomField>