force-app/main/default/objects/Quota__c/listViews/Account_Executive.listView-meta.xml
<ListView>
    <fullName>Account_Executive</fullName>
    <columns>NAME</columns>
    <columns>Quarterly_Quota_Amount__c</columns>
    <columns>Monthly_Quota_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Cal</value>
    </filters>
    <label>Account Executive</label>
</ListView>