force-app/main/default/objects/Quota__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quota_Start_Date__c</columns>
    <columns>Quota_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>