force-app/main/default/objects/Quota__c/listViews/Enterpirse_Strategic_Sales_Leader.listView-meta.xml
<ListView>
    <fullName>Enterpirse_Strategic_Sales_Leader</fullName>
    <columns>NAME</columns>
    <columns>Quarterly_Quota_Amount__c</columns>
    <columns>Monthly_Quota_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>Cal</value>
    </filters>
    <label>Enterprise Strategic &amp; Sales Leader</label>
</ListView>